# niftykb

./: .atom-build.json  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_debug_x64.sh  main.pro
3rdPartyLicenses/: Mumble.txt
cmake/: FindDirectX.cmake  FindQtSingleApplication.cmake  curl_orxonox_cmake_files.sh
misc/sample-client/: MSClient.cpp  MSClient.sln  MSClient.vcxproj  MSClient.vcxproj.filters  README.md
mumblesrc/: compiler.pri
mumblesrc/src/: OSInfo.cpp  OSInfo.h  Timer.cpp
mumblesrc/src/mumble/: GlobalShortcut.cpp  GlobalShortcut.h  GlobalShortcut_win.cpp  mumble.pro
src/: CMakeLists.txt  Global.cpp  Global.h  GlobalShortcut.cpp  GlobalShortcut.h  GlobalShortcut_win.cpp  GlobalShortcut_win.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowActions.cpp  Settings.cpp  Settings.h  ShortcutDialog.cpp  ShortcutDialog.h  ShortcutDialog.ui  ShortcutEditor.cpp  ShortcutEditor.h  ShortcutEditor.ui  ShortcutEditorWidgets.cpp  ShortcutEditorWidgets.h  Timer.cpp  Timer.h  common.h  dinputkeydebug.pro  main.cpp  niftykb.rc  os_win.cpp  resources.qrc
src/assets/: LICENSE.md
